# firemon-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/api/: api.rst  core.rst
docs/api/apps/: controlpanel.rst  orchestration.rst  policyplanner.rst  securitymanager.rst  structures.rst
docs/api/apps/controlpanel/: certauth.rst  config.rst  diagpkg.rst
docs/api/apps/orchestration/: changes.rst
docs/api/apps/policyplanner/: packets.rst  tasks.rst
docs/api/apps/securitymanager/: centralsyslogs.rst  collectionconfigs.rst  devicepacks.rst  devices.rst  maps.rst  revisions.rst  routes.rst  rulerec.rst  users.rst  zones.rst
docs/api/core/: app.rst  endpoint.rst  errors.rst  query.rst  response.rst
docs/policyplanner/: tickets.rst  workflows.rst
docs/securitymanager/: devicepacks.rst  devices.rst  users.rst
docs/source/: conf.py
docs/source/api/: api.rst  apps.rst
docs/source/api/apps/: controlpanel.rst  policyplanner.rst  securitymanager.rst
docs/source/api/core/: endpoint.rst
docs/user/: quickstart.rst
firemon-api/: __init__.py  api.py
firemon-api/apps/globalpolicycontroller/: globalpolicycontroller.py
firemon-api/apps/policyoptimizer/: policyoptimizer.py
firemon-api/apps/policyplanner/: policyplanner.py
firemon-api/apps/securitymanager/: centralsyslogs.py  collectionconfigs.py  collectors.py  devicepacks.py  devices.py  revisions.py  securitymanager.py  users.py
firemon-api/core/: utils.py
firemon_api/: __init__.py  api.py  errors.py
firemon_api/apps/: __init__.py
firemon_api/apps/controlpanel/: __init__.py  certauth.py  cleanup.py  config.py  database.py  diagpkg.py  errors.py
firemon_api/apps/globalpolicycontroller/: __init__.py  globalpolicycontroller.py  policycompute.py
firemon_api/apps/orchestration/: __init__.py  changes.py
firemon_api/apps/policyoptimizer/: __init__.py  policyoptimizer.py
firemon_api/apps/policyplanner/: __init__.py  packets.py  policyplan.py  policyplanner.py  siql.py  tasks.py  workflows.py
firemon_api/apps/securitymanager/: __init__.py  access_path.py  centralsyslogconfigs.py  centralsyslogs.py  collectionconfigs.py  collectors.py  deviceclusters.py  devicegroups.py  devicepacks.py  devices.py  elasticsearch.py  license.py  logging.py  maps.py  networksegments.py  revisions.py  routes.py  rulerec.py  securitymanager.py  siql.py  users.py  zones.py
firemon_api/apps/structure/: __init__.py  apa.py  collector.py  device.py  policyplan.py  rulerec.py
firemon_api/core/: api.py  app.py  endpoint.py  errors.py  query.py  response.py  utils.py
fmapi/: __init__.py  api.py  errors.py
fmapi/apps/: securitymanager.py
fmapi/apps/globalpolicycontroller/: __init__.py  globalpolicycontroller.py
fmapi/apps/policyoptimizer/: __init__.py  policyoptimizer.py
fmapi/apps/policyplanner/: policyplanner.py
fmapi/apps/securitymanager/: centralsyslogs.py  collectionconfigs.py  collectors.py  devicepacks.py  devices.py  revisions.py  securitymanager.py  users.py
fmapi/core/: response.py  utils.py
src/docs/: conf.py
src/docs/_build/doctrees/: environment.pickle  index.doctree
src/docs/_build/doctrees/api/: api.doctree  apps.doctree  core.doctree
src/docs/_build/doctrees/policyplanner/: tickets.doctree  workflows.doctree
src/docs/_build/doctrees/securitymanager/: devicepacks.doctree  devices.doctree  siql.doctree  users.doctree
src/docs/_build/doctrees/user/: advanced.doctree  install.doctree  quickstart.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/api/: api.html  apps.html  core.html
src/docs/_build/html/policyplanner/: tickets.html  workflows.html
src/docs/_build/html/securitymanager/: devicepacks.html  devices.html  siql.html  users.html
src/docs/_build/html/user/: advanced.html  install.html  quickstart.html
src/docs/api/: apps.rst
src/docs/api/apps/controlpanel/: database.rst
src/docs/api/apps/policyplanner/: policyplan.rst  siql.rst
src/docs/api/apps/securitymanager/: deviceclusters.rst  devicegroups.rst  logging.rst
src/docs/securitymanager/: siql.rst
src/docs/user/: install.rst
src/firemon_api/: __init__.py
src/firemon_api/apps/: __init__.py
src/firemon_api/apps/controlpanel/: __init__.py  database.py
src/firemon_api/apps/policyplanner/: __init__.py  packets.py  policyplan.py  siql.py  tasks.py
src/firemon_api/apps/securitymanager/: __init__.py  access_path.py  centralsyslogconfigs.py  centralsyslogs.py  collectors.py  devices.py  license.py  logging.py  routes.py  usertags.py  zones.py
src/firemon_api/core/: api.py
(+97 files in other folders)
