[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
#include = [""]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "firemon-api"
description = "Python Wrapper for Firemon APIs"
authors = [{ name = "Luke Johannsen", email = "luke.johannsen@firemon.com" }]
license = { text = "MIT License" }
keywords = ["firemon", "api", "development"]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["chardet", "requests", "tenacity"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.urls]
Documentation = "https://firemon-api.readthedocs.io/en/latest/"
Repository = "https://github.com/lukejohannsen/firemon-api"
