[metadata]
name = firemon-api
description = NetSec Python Wrapper for Firemon API
url = https://stash.securepassage.com/scm/nsu/firemon-api
author = Luke Johannsen
author_email = luke.johannsen@firemon.com
project_urls =
    Documentation = https://confluence.securepassage.com/display/DEVNETSEC/FMAPI:+Python+Firemon+API+module
    Source = https://stash.securepassage.com/scm/nsu/firemon-api
license = MIT
keywords = firemon, api, development
classifiers =
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    requests
    tenacity

[options.packages.find]
exclude = 
    tests
    docs