[metadata]
name = firemon-api
description = Python Wrapper for Firemon APIs
author = Luke Johannsen
author_email = luke.johannsen@firemon.com
license = MIT
keywords = firemon, api, development
classifiers =
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    requests
    tenacity

[options.packages.find]
exclude = 
    tests
    docs