[metadata]
name = firemon-api
description = Python Wrapper for Firemon APIs
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Johannsen
author_email = luke.johannsen@firemon.com
project_urls =
    Documentation = https://firemon-api.readthedocs.io/en/latest/
    Source = https://github.com/lukejohannsen/firemon-api
license = MIT
keywords = firemon, api, development
classifiers =
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    chardet
    requests
    tenacity

[options.packages.find]
exclude = 
    tests
    docs